# telegram_request_bot

./: .gitignore  README.md  main.py  pyproject.toml  request_data.json
